--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -214,6 +214,12 @@ actions:
 sortedByRelevance:
   en: Sorted by relevance
   de: Nach Relevanz sortiert
+sortedByName:
+  en: Sorted by name
+  de: Nach Name sortiert
+sortedByCapacity:
+  en: Sorted by capacity
+  de: Nach Kapazität sortiert
 sortedByTitle:
   en: Sorted by title
   de: Nach Titel sortiert
