EDU-463 Adjust image optimization

--- a/src/components/storage-browser.yml
+++ b/src/components/storage-browser.yml
@@ -43,6 +43,6 @@ uploadLimit:
 uploadLimitExceeded:
   en: Upload limit of {uploadLimit} is exceeded. Your upload size is {uploadSize}.
   de: Uploadbegrenzung von {uploadLimit} ist überschritten. Ihre Uploadgröße ist {uploadSize}.
-scaleDownImages:
+optimizeImages:
   en: Optimize images for web display
   de: Bilder für Web optimieren
