EDU-468 Restructure image editor to support new effect

--- a/src/plugins/image/image.yml
+++ b/src/plugins/image/image.yml
@@ -16,6 +16,9 @@ hoverOption:
 revealOption:
   en: Reveal
   de: Auflösung
+clipOption:
+  en: Clip
+  de: Abschneiden
 internalCdn:
   en: Internal CDN
   de: Internes CDN
