--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-pdf": "^5.7.1",
     "react-piano": "^3.1.3",
     "react-player": "^2.9.0",
+    "react-region-select": "^2.3.0",
     "react-soundplayer": "^1.0.5",
     "react-vis": "^1.11.7",
     "read-all-stream": "^3.1.0",
