--- a/src/plugins/image/image.yml
+++ b/src/plugins/image/image.yml
@@ -34,6 +34,12 @@ copyrightInfos:
 maximumWidth:
   en: Maximum width
   de: Maximale Breite
+width:
+  en: Width
+  de: Breite
+height:
+  en: Height
+  de: Höhe
 effectTypeLabel:
   en: Effect
   de: Effekt
