EDU-468 Display scaled image clipping and corresponding warning message

--- a/src/plugins/image/image.yml
+++ b/src/plugins/image/image.yml
@@ -58,3 +58,6 @@ orientationOptionHorizontal:
 smallImageSizeWarning:
   en: The selected image has a smaller width than the page content and might therefore be displayed smaller than expected.
   de: Das von Ihnen gewählte Bild hat eine geringere Breite als der Seiteninhalt und wird deshalb unter Umständen kleiner als erwartet angezeigt.
+smallClippingSizeWarning:
+  en: The selected clipping has a smaller width than the page content and might therefore be displayed smaller than expected.
+  de: Das von Ihnen gewählte Abschneidung hat eine geringere Breite als der Seiteninhalt und wird deshalb unter Umständen kleiner als erwartet angezeigt.
