EDU-468 Add hint above clip effect image

--- a/src/plugins/image/image.yml
+++ b/src/plugins/image/image.yml
@@ -61,3 +61,6 @@ smallImageSizeWarning:
 smallClippingSizeWarning:
   en: The selected area has a smaller width than the page content and might therefore be displayed smaller than expected.
   de: Der ausgewählte Bereich hat eine geringere Breite als der Seiteninhalt und wird deshalb unter Umständen kleiner als erwartet angezeigt.
+clipEffectHint:
+  en: Please use the selection rectangle to specify the displayed area
+  de: Bitte benutzen Sie das Markierungsrechteck, um einen Bildbereich auszuwählen
