EDU-471 Extend settings tab to show last batch executions

--- a/src/components/admin/settings-tab.yml
+++ b/src/components/admin/settings-tab.yml
@@ -31,3 +31,6 @@ templateDocumentHeader:
 licenseHeader:
   en: License
   de: Lizenz
+lastExecution:
+  en: Last execution
+  de: Letzte Ausführung
