EDU-480 Correct German translation

--- a/src/components/favorites-tab.yml
+++ b/src/components/favorites-tab.yml
@@ -6,4 +6,4 @@ setOn:
   de: Hinzugefügt am
 sortedBySetOn:
   en: Sorted by date of adding
-  de: Nach Hinfügungsdatum sortiert
+  de: Nach Hinzufügungsdatum sortiert
