--- a/src/components/consent-drawer.yml
+++ b/src/components/consent-drawer.yml
@@ -19,5 +19,5 @@ consentTextMarkdown:
       Indem Sie auf Akzeptieren klicken, bestätigen Sie, gegen die Einbindung externer Quellen keine Einwände zu haben.
 
       Wenn Sie in Dokumenten Text speichern und Dateien auf den Server hochladen, werden diese – sofern in Dateien keine
-      anderen CC-Lizenz angegeben wird – unter der Standardlizenz dieser Plattform veröffentlicht: CC BY-SA 4.0 (any later version).
+      andere CC-Lizenz angegeben wird – unter der Standardlizenz dieser Plattform veröffentlicht: CC BY-SA 4.0 (any later version).
       Indem Sie auf Akzeptieren klicken, stimmen Sie dem zu.
