--- a/src/components/rooms-tab.yml
+++ b/src/components/rooms-tab.yml
@@ -13,6 +13,9 @@ sortedByOwner:
 sortedByAccess:
   en: Sorted by access
   de: Nach Zugang sortiert
+sortedByLessonsMode:
+  en: Sorted by lessons mode
+  de: Nach Modus sortiert
 sortedByRole:
   en: Sorted by role
   de: Nach Rolle sortiert
