--- a/src/components/rooms-tab.yml
+++ b/src/components/rooms-tab.yml
@@ -14,8 +14,8 @@ sortedByAccess:
   en: Sorted by access
   de: Nach Zugang sortiert
 sortedByLessonsMode:
-  en: Sorted by lessons mode
-  de: Nach Modus sortiert
+  en: Sorted by lessons handling mode
+  de: Nach Unterrichtseinheiten-Bearbeitungsmodus sortiert
 sortedByRole:
   en: Sorted by role
   de: Nach Rolle sortiert
