EDU-473 Correct German translations

--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -60,4 +60,4 @@ removeMember:
   de: Mitglied entfernen
 revokeInvitation:
   en: Revoke invitation
-  de: Einladung zurückziehen
+  de: Einladung widerrufen
