--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -18,10 +18,10 @@ deleteRoomConfirmation:
   de: Möchten Sie den Raum "{roomName}" wirklich löschen?
 deleteRoomMemberConfirmation:
   en: Do you really want remove member "{memberUsername}" from the room?
-  de: Möchten Sie den Mitglied "{memberUsername}" wirklich vom Raum entfernen?
+  de: Möchten Sie das Mitglied "{memberUsername}" wirklich vom Raum entfernen?
 deleteRoomInvitationConfirmation:
   en: Do you really want revoke room invitation send to "{invitationEmail}"?
-  de: Möchten Sie die Raumeinladung für "{invitationEmail}" wirklich zurücknehmen?
+  de: Möchten Sie die Raumeinladung für "{invitationEmail}" wirklich widerrufen?
 deleteLessonConfirmation:
   en: Do you really want to delete lesson "{lessonName}"?
   de: Möchten Sie die Unterrichtseinheit "{lessonName}" wirklich löschen?
