EDU-499 Show searching headlines while fetching documents

--- a/src/components/pages/search.yml
+++ b/src/components/pages/search.yml
@@ -1,4 +1,7 @@
-headline:
+headlineSearching:
+  en: Searching ...
+  de: Suchen ...
+headlineDocumentsFound:
   en: |
     {count, plural, =1 {# document} other {# documents}} found
   de: |
