--- a/src/components/admin/settings-tab.yml
+++ b/src/components/admin/settings-tab.yml
@@ -10,6 +10,9 @@ termsPageHeader:
 footerLinksHeader:
   en: Footer links
   de: Footer-Links
+consentHeader:
+  en: Consent text
+  de: Zustimmungstext
 defaultTagsHeader:
   en: Default tags
   de: Vordefinierte Tags
