EDU-519 Add the rest of the inputs

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -315,6 +315,9 @@ internalCdn:
 externalLink:
   en: External link
   de: Externer Link
+internalLink:
+  en: Internal link
+  de: Interner Link
 youtube:
   en: Youtube
   de: Youtube
