--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -1,3 +1,6 @@
 name:
   en: Interactive media
   de: Interaktive Medien
+determiningDuration:
+  en: Determining media duration ...
+  de: Mediendauer wird entdeckt ...
