--- a/src/plugins/table/table.yml
+++ b/src/plugins/table/table.yml
@@ -1,6 +1,15 @@
 name:
   en: Table
   de: Tabelle
+columnDistribution:
+  en: Column width
+  de: Spaltenbreite
+columnDistribution_automatic:
+  en: Automatic
+  de: Automatisch
+columnDistribution_even:
+  en: Even
+  de: Gleichmäßig
 cellAction_convertToHeaderRow:
   en: Convert to header row
   de: In Kopfzeile konvertieren
