EDU-531 Reflect chapters and sourceDuration in timeline

--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -4,3 +4,6 @@ name:
 determiningDuration:
   en: Determining media duration ...
   de: Mediendauer wird entdeckt ...
+defaultChapterTitle:
+  en: Chapter
+  de: Kapitel
