--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -7,3 +7,12 @@ determiningDuration:
 defaultChapterTitle:
   en: Chapter
   de: Kapitel
+editChapter:
+  en: Edit chapter
+  de: Kapitel bearbeiten
+selectPreviousChapter:
+  en: Select previous chapter
+  de: Vorheriges Kapitel wählen
+selectNextChapter:
+  en: Select next chapter
+  de: Nächstes Kapitel wählen
