EDU-518 Replace documentSelector with documentPicker and drop documentSlug usage

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -180,6 +180,9 @@ lessonsMode_exclusive:
 lessonsMode_collaborative:
   en: collaborative
   de: kollaborativ
+documentTitle:
+  en: Document title
+  de: Dokument-Titel
 title:
   en: Title
   de: Titel
