EDU-544 Show error message when image load fails for main image

--- a/src/plugins/image/image.yml
+++ b/src/plugins/image/image.yml
@@ -46,3 +46,6 @@ smallClippingSizeWarning:
 clipEffectHint:
   en: Please use the selection rectangle to specify the displayed area
   de: Bitte benutzen Sie das Markierungsrechteck, um einen Bildbereich auszuwählen
+imageLoadingErrorMessage:
+  en: The image could not be loaded
+  de: Das Bild konnte nicht geladen werden
