EDU-546 Add start and stop timecodes in interactive media player sources

--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -3,7 +3,7 @@ name:
   de: Interaktive Medien
 determiningDuration:
   en: Determining media duration ...
-  de: Mediendauer wird entdeckt ...
+  de: Mediendauer wird ermittelt ...
 defaultChapterTitle:
   en: Chapter
   de: Kapitel
@@ -16,3 +16,9 @@ selectPreviousChapter:
 selectNextChapter:
   en: Select next chapter
   de: Nächstes Kapitel wählen
+playbackRange:
+  en: Playback range
+  de: Abspielbereich
+playbackRangeInfo:
+  en: "From {from, select, start {the beginning} other {timecode {from}}} to {to, select, end {the end} other {timecode {to}}}"
+  de: "Von {from, select, start {Anfang} other {Time-Code {from}}} bis {to, select, end {Ende} other {Time-Code {to}}}"
